--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "3.9"
+version: "3.3"
 
 name: my_wallet
 
@@ -13,25 +13,26 @@ services:
     ports:
       - '8080:80'
     volumes:
-      - "./:var/www/html"
-      - "./configs/ngnix.conf:/etc/nginx/conf.d/default.conf"
+      - "../src:/var/www/html"
+      - "./configs/nginx.conf:/etc/nginx/conf.d/default.conf"
     networks:
       - my_wallet
 
   app:
     build: 
-      context: .
+      context: ../src
       dockerfile: Dockerfile
     container_name: mw_app
     ports:
       - "9000:9000"
     volumes:
-      - "./:/var/www/html"
+      - "../src:/var/www/html:rw"
+      - /var/www/html/vendor
     networks:
       - my_wallet
 
   mysql:
-    image: mysql:8
+    image: mysql:latest
     container_name: mw_mysql
     ports:
       - "3306:3306"
@@ -48,16 +49,17 @@ services:
     image: phpmyadmin
     container_name: mw_phpmyadmin
     depends_on:
-      - mw_mysql
+      - mysql
     restart: always
+    tty: true
     environment:
-      - PMA_HOST=mysql-db
+      - PMA_HOST=mysql
       - PMA_PORT=3306
       - PMA_ARBITRARY=1
     volumes:
       - ./configs/pma.ini:/usr/local/etc/php/php.ini
     ports:
-     - "8081:81"
+     - "8081:80"
     networks:
       - my_wallet
   
